# nyarix-runtime

./: Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/runtime-test/: Cargo.toml
apps/runtime-test/src/: main.rs
crates/nyarix-config/: Cargo.toml
crates/nyarix-config/src/: lib.rs
crates/nyarix-core/: Cargo.toml
crates/nyarix-core/src/: id.rs  lib.rs  platform.rs  version.rs
crates/nyarix-error/: Cargo.toml
crates/nyarix-error/src/: lib.rs
crates/nyarix-graph/: Cargo.toml
crates/nyarix-graph/src/: condition.rs  edge.rs  execution.rs  export.rs  graph.rs  lib.rs  metrics.rs  node.rs  queue.rs  throughput.rs
crates/nyarix-loader/: Cargo.toml
crates/nyarix-loader/src/: cache.rs  conflict.rs  dependency_graph.rs  installer.rs  instantiation.rs  lib.rs  rollback.rs  validation.rs  version_resolver.rs
crates/nyarix-module-api/: Cargo.toml
crates/nyarix-module-api/src/: capability.rs  config.rs  context.rs  event.rs  fallback.rs  health.rs  io_policy.rs  lib.rs  metadata.rs  metrics.rs  module.rs  node.rs  platform.rs  rate_limiter.rs  resource_limits.rs  sandbox.rs  sandbox_permission.rs  versioning.rs
crates/nyarix-package/: Cargo.toml
crates/nyarix-package/src/: archive.rs  lib.rs  manifest.rs  signing.rs  trust.rs
crates/nyarix-packet/: Cargo.toml
crates/nyarix-packet/src/: lib.rs  metadata.rs  packet.rs  payload.rs  pool.rs  tags.rs
crates/nyarix-runtime/: Cargo.toml
crates/nyarix-runtime/src/: capability_enforcement.rs  cpu_pool.rs  debug_dump.rs  event.rs  execution_loop.rs  graph_builder.rs  init.rs  io_pool.rs  lib.rs  module_loader.rs  pause.rs  priority.rs  runtime_metrics.rs  sandbox.rs  shutdown.rs  version_switch.rs
