[workspace]
resolver = "2"
members = [
    "crates/nyarix-core",
    "crates/nyarix-error",
    "crates/nyarix-config",
    "crates/nyarix-packet",
    "crates/nyarix-graph",
    "crates/nyarix-module-api",
    "crates/nyarix-package",
    "crates/nyarix-loader",
    "crates/nyarix-runtime",
    "apps/runtime-test",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/F000NKKK/nyarix-runtime"
rust-version = "1.93"

[workspace.dependencies]
# --- Internal crates ---
nyarix-core = { path = "crates/nyarix-core" }
nyarix-error = { path = "crates/nyarix-error" }
nyarix-config = { path = "crates/nyarix-config" }
nyarix-packet = { path = "crates/nyarix-packet" }
nyarix-graph = { path = "crates/nyarix-graph" }
nyarix-module-api = { path = "crates/nyarix-module-api" }
nyarix-package = { path = "crates/nyarix-package" }
nyarix-loader = { path = "crates/nyarix-loader" }
nyarix-runtime = { path = "crates/nyarix-runtime" }

# --- External dependencies ---
bytes = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
parking_lot = "0.12"
dashmap = "6"
smallvec = "1"
strum = { version = "0.28", features = ["derive"] }
bitflags = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
bincode = "3"
semver = { version = "1", features = ["serde"] }
rayon = "1"
tar = "0.4"
zstd = "0.13"

# --- Dev dependencies ---
criterion = "0.8"
proptest = "1"
rstest = "0.26"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
# Too noisy for early development
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
