[package]
name = "nyarix-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
nyarix-error.workspace = true
bytes.workspace = true
tracing.workspace = true
parking_lot.workspace = true
uuid.workspace = true

[lints]
workspace = true
