[package]
name = "nyarix-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
nyarix-core.workspace = true
nyarix-error.workspace = true
nyarix-packet.workspace = true
tracing.workspace = true

[lints]
workspace = true
