[package]
name = "nyarix-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
nyarix-core.workspace = true
nyarix-error.workspace = true
nyarix-packet.workspace = true
nyarix-module-api.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
thiserror.workspace = true

[dev-dependencies]
semver.workspace = true

[lints]
workspace = true
