[package]
name = "nyarix-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
nyarix-error.workspace = true
nyarix-module-api.workspace = true
nyarix-package.workspace = true
nyarix-packet.workspace = true
semver.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true

[lints]
workspace = true
