[package]
name = "nyarix-package"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
nyarix-error.workspace = true
nyarix-module-api.workspace = true
serde.workspace = true
semver.workspace = true
toml.workspace = true
tar.workspace = true
zstd.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand_core = { workspace = true }

[lints]
workspace = true
