[package]
name = "nyarix-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
nyarix-core.workspace = true
nyarix-error.workspace = true
nyarix-config.workspace = true
nyarix-packet.workspace = true
nyarix-graph.workspace = true
nyarix-module-api.workspace = true
nyarix-loader.workspace = true
nyarix-package.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
toml.workspace = true
rayon.workspace = true
semver.workspace = true

[lints]
workspace = true
